@@ -29,7 +29,6 @@ if (file_exists($PLAYSMS_PATH))
 	playsmsd();
 	getsmsinbox();
 	getsmsstatus();
-	execgwcustomcmd();
 	execcommoncustomcmd();
 	echo "session:".mktime()."\n";
 	echo "end cycling\n";
